# aether

./: .gitignore  Cargo.toml  GETTING_STARTED.md  PROGRESS.md  README.md  clippy.toml  final.md  overview.md  package-lock.json
.cargo/: audit.toml
.claude/: settings.policy.json
.claude/skills/docs-scope-review/: SKILL.md
.claude/skills/docs-scope-review/agents/: openai.yaml
.claude/skills/review-pr/: SKILL.md
.claude/skills/systems-engineering/: SKILL.md
.claude/skills/systems-engineering/agents/: openai.yaml
.claude/skills/technical-choice/: SKILL.md
.claude/skills/technical-choice/agents/: openai.yaml
.github/workflows/: ci.yml
ai-mesh/coordinator/src/: lib.rs
crates/agent-schema/: Cargo.toml
crates/agent-schema/src/: lib.rs  schema.rs
crates/crypto/pq/: Cargo.toml
crates/crypto/pq/benches/: pq_bench.rs
crates/crypto/pq/src/: lib.rs
crates/crypto/threshold/: Cargo.toml
crates/crypto/threshold/src/: lib.rs
crates/da/erasure-coding/src/: decoder.rs
crates/ledger/src/: state.rs
crates/mempool/src/: pool.rs
crates/networking/quic-transport/: Cargo.toml
crates/networking/quic-transport/src/: connection.rs  endpoint.rs
crates/node/src/: node.rs
crates/programs/account-abstraction/: Cargo.toml
crates/programs/account-abstraction/src/: lib.rs
crates/programs/agent-run-escrow/: Cargo.toml
crates/programs/agent-run-escrow/src/: lib.rs
crates/runtime/src/: vm.rs
crates/sdk/rust/: Cargo.toml
crates/sdk/rust/src/: agent_builder.rs  agent_identity.rs  client.rs  lib.rs  payment.rs
crates/sdk/rust/tests/: agent_settlement_e2e.rs  payment_http.rs
docs/: architecture.md  public-interface-manifest.json
docs/ecosystem/: aether-agent-settlement.md
docs/phase7/: implementation_plan.md
docs/security/: AGENT_CRYPTO_SOTA.md
fixtures/: agent-payment-v1.json
scripts/: check-public-interface-manifest.py  validate-harness.sh
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: agent-payment.ts  index.ts  node-shims.d.ts
sdks/typescript/tests/: agent-payment.test.ts
