[package]
name = "aether-agent-schema"
version.workspace = true
edition.workspace = true
description = "Agent settlement schema types for Aether receipts, authorizations, and payment envelopes"
categories = ["cryptography::cryptocurrencies", "data-structures"]
keywords = ["aether", "agents", "schema", "receipts"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

aether-types = { path = "../types" }

[dev-dependencies]
proptest = { workspace = true }
