[package]
name = "aether-quic-transport"
version.workspace = true
edition.workspace = true
description = "QUIC-based low-latency transport layer for Aether inter-validator communication"
categories = ["network-programming"]
keywords = ["aether", "quic", "transport", "networking"]

[dependencies]
quinn.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
tracing.workspace = true
bytes = "1"
webpki = "0.22"
