[package]
name = "aether-sdk"
version.workspace = true
edition.workspace = true
description = "Ergonomic Rust client SDK for building applications on the Aether blockchain"
categories = ["api-bindings", "cryptography::cryptocurrencies"]
keywords = ["aether", "sdk", "client", "blockchain"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
serde_json.workspace = true
hex = "0.4"

aether-types = { path = "../../types" }
aether-agent-schema = { path = "../../agent-schema" }
aether-crypto-primitives = { path = "../../crypto/primitives" }

[dev-dependencies]
aether-account-abstraction = { path = "../../programs/account-abstraction" }
aether-program-agent-run-escrow = { path = "../../programs/agent-run-escrow" }
frost-ristretto255 = { version = "=1.0.0", default-features = false, features = ["serialization"] }
proptest = { workspace = true }
rand = { workspace = true }
